Fix epg row overflow (issue #1240)

--- a/c/epg.css
+++ b/c/epg.css
@@ -1,4 +1,4 @@
-#epg .blue_row_bg{
+/*#epg .blue_row_bg{
     position: absolute;
     left: 49px;
     top: 92px;
@@ -6,7 +6,7 @@
     height: 34px;
     background-image: url("i/tv_table.png");    
     background-position: 0 -36px;
-}
+}*/
 
 #epg .active_row_bg, #epg .blue_row_bg[active="active"]{
     position: absolute;
@@ -118,6 +118,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space:pre;
+    font-family: "Myriad Pro Cond", sans-serif;
 }
 
 #epg .program_separator{
@@ -227,7 +228,8 @@
 
 #epg .live_line{
     position: absolute;
-    background-color: #f00;
+    background-color: rgba(255, 0, 0, 0.4);
     width: 2px;
     height: 339px;
+    -webkit-transition: all 0.2s linear;
 }
