--- a/c/epg.simple.css
+++ b/c/epg.simple.css
@@ -1,4 +1,4 @@
-#epg_simple .blue_row_bg{
+/*#epg_simple .blue_row_bg{
     position: absolute;
     left: 231px;
     top: 92px;
@@ -6,7 +6,7 @@
     height: 34px;
     background-image: url("i/tv_table.png");    
     background-position: -182px -36px;
-}
+}*/
 
 #epg_simple .blue_row_bg[active="active"]{
     background-position: -182px -1px;
