--- a/c/epg.simple_720.css
+++ b/c/epg.simple_720.css
@@ -1,11 +1,11 @@
-#epg_simple .blue_row_bg{
+/*#epg_simple .blue_row_bg{
     position: absolute;
     left: 330px;
     top: 92px;
     width: 802px;
     height: 45px;
     background: url("i_720/tv_table.png") no-repeat -339px -44px;
-}
+}*/
 
 #epg_simple .blue_row_bg[active="active"]{
     background-position: -339px 1px;
