--- a/c/layer.list.css
+++ b/c/layer.list.css
@@ -673,3 +673,23 @@
     margin: 4px 8px 0 8px;
     line-height: 28px;
 }
+
+#epg_simple .blue_row_bg{
+    position: absolute;
+    left: 231px;
+    top: 92px;
+    width: 450px;
+    height: 34px;
+    background-image: url("i/tv_table.png");
+    background-position: -182px -36px;
+}
+
+#epg .blue_row_bg{
+    position: absolute;
+    left: 49px;
+    top: 92px;
+    width: 632px;
+    height: 34px;
+    background-image: url("i/tv_table.png");
+    background-position: 0 -36px;
+}
